# KSCOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PreLoad.cmake  README.md  makefile  master.c
examples/: example.c  imprrove.txt
examples/Dependence/: file.cmake  tasks.json
examples/basicdraw/: 3d_cube.c  cutedrawing.c  cutedrawing2.c  example.c  exampleimage.c
examples/cli/: testkprintf.c  testruncli.c
examples/flash/: writeflash.c
examples/key/: keymenu.c
examples/littlefs/: littlefsstart.c
inc/: CLI.h  Driver_GUI.h  KSCOSsystem.h  KSCbasicdrawN.h  KSCbasicdrawN_fast.h  KSCconfig.h  KSCdisplay.h  KSCdraw.h  KSCfont.h  KSCimg.h  KSCobj.h  Serial.h  TFTDriver.h  UTF8_FlashN.h  W25Q64.h  application.h  clocktask.h  cmd.h  dd.h  filemenu.h  filetxt.h  input.h  key.h  main.h  master.h  menu.h  osconnect.h
littlefs/: lfs_config.c  lfs_config.h  lfs_port.c  lfs_port.cpp
pdrvs/: CMakeLists.txt  console.c  device.c  sys_systime.c  timer.c
src/: CLI.c  CMakelists.txt  Driver_GUI.c  KSCOSsystem.c  KSCbasicdrawN.c  KSCbasicdrawN_fast.c  KSCdisplay.c  KSCdisplay.cpp  KSCdraw.c  KSCfont.c  KSCimg.c  KSCobj.c  MySPI2.c  Serial.c  TFTDriver.c  UTF8_FlashN.c  W25Q64.c  application.c  clocktask.c  cmd.c  config.c  dd.c  filemenu.c  filetxt.c  input.c  key.c  key.cpp  menu.c  osconnect.c  txt.c
three_party/stm32/: stm32f1xx_hal_dma_1.c  stm32f1xx_hal_spi_1.c
